# ZnJSON

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yaml  pytest.yaml
CI/: test_main.py
CI/converter/: test_numpy_converter.py  test_pandas_converter.py  test_pathlib_converter.py
example/: compare_to_jsonpickle.ipynb  datetime_converter.ipynb  example.ipynb
tests/: test_backwards.py  test_config.py  test_main.py  test_znjson.py
tests/converter/: test_class_converter.py  test_numpy_converter.py  test_old_converters.py  test_pandas_converter.py  test_pathlib_converter.py  test_plotly_converter.py  test_small_numpy_converter.py
znconv/: __init__.py  base.py  main.py
znconv/converter/: numpy.py  numpy_converter.py  pandas_converter.py  pathlib_converter.py
znjson/: __init__.py  base.py  config.py  main.py
znjson/converter/: __init__.py  class_converter.py  numpy_converter.py  numpy_converter_base64.py  numpy_converter_latin1.py  numpy_converter_small.py  old_converters.py  pandas_converter.py  pathlib_converter.py  plotly_converter.py  small_numpy_converter.py
znjson/exceptions/: __init__.py
