[tool.poetry]
name = "znjson"
version = "0.2.3"
description = "A Python Package to Encode/Decode some common file formats to json"
authors = ["zincwarecode <zincwarecode@gmail.com>"]
license = "Apache-2.0"
keywords=["json", "zntrack", "jsonpickle", "serialization", "deserialization"]
readme = "README.md"

[tool.poetry.urls]
repository = "https://github.com/zincware/ZnJSON"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
numpy = "^1"
pandas = "^1"
pytest = "^7"
ase = "^3.22.1"
ruff = "^0.4.6"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
