[tool.poetry]
name = "znjson"
version = "0.2.6"
description = "A Python Package to Encode/Decode some common file formats to json"
authors = ["zincwarecode <zincwarecode@gmail.com>"]
license = "Apache-2.0"
keywords=["json", "zntrack", "jsonpickle", "serialization", "deserialization"]
readme = "README.md"

[tool.poetry.urls]
repository = "https://github.com/zincware/ZnJSON"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
numpy = "^1"
pandas = "^2"
pytest = "^7"
ase = "^3.22"
ruff = "^0.4.6"
coverage = "^7"
plotly = "^5.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I", "E", "W", "C", "F"]
